# qgis-project-configurator

./: .copyright-header.txt  .editorconfig  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  README.md  pyproject.toml  qgis-project-configurator.code-workspace  requirements-dev.txt  whitelist.txt
.github/workflows/: code-style.yaml  draft-release.yml  release.yml  test.yaml
.github/workflows/draft-release/: extract-changes.py  set-version-post0.py  set-version.py
src/qgis_project_configurator/: __init__.py  config.py  create_project.py  create_template.py  export_styles.py  layer_manager.py  layout_manager.py  map_theme_manager.py  project_manager.py  qgis_utils.py  runtimeprofiler.py  types.py  yaml_utils.py
src/qgis_project_configurator/cli/: cli_utils.py  create_project.py  create_template.py
src/qgis_project_configurator_plugin/: __init__.py  metadata.txt  plugin.py  processing.py
src/qgis_project_configurator_plugin/algorithms/: create_project.py  create_template_config.py
src/qgis_project_configurator_plugin/tools/: export_styles.py  parameters.py
src/qgis_project_configurator_plugin/ui/: create_project_dialog.py  create_project_panel_widget.py  create_project_panel_widget.ui  export_styles_dialog.py  export_styles_dialog.ui
test/: conftest.py
test/config_compilation/: test_layer_tree.py  test_layouts.py  test_project_properties.py
test/config_loading/: test_config_loading.py
test/resources/yaml/: component_1.yaml  component_2.yaml  include.yaml
