[project]
name = "qgis-project-configurator"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = ["PyYAML", "qgis_plugin_tools"]

[tool.setuptools.package-data]
"qgis_project_configurator_plugin" = [
  "metadata.txt",
  "py.typed",
  "**/*.ui",
  "**/*.json",
  "**/*.svg",
  "**/*.ts",
  "**/*.qm",
]
"qgis_project_configurator" = [
  "py.typed",
  "**/*.ui",
  "**/*.json",
  "**/*.svg",
  "**/*.ts",
  "**/*.qm",
]

[project.scripts]
create-project = "qgis_project_configurator.cli.create_project:main"

[dependency-groups]
dev = [
  "qgis-plugin-dev-tools>=0.11.0",
  # testing
  "pytest",
  "pytest-mock",
  "pytest-timeout",
  "pytest-xdist>=3.8.0",
  "pytest-qt",
  "pytest-qgis",
  # linting tools
  "prek",
  "mypy",
  "ruff",
  # flake8 plugins
  "flake8-qgis",
  "flake8-pyproject",
  "flake8-spellcheck",
  # stubs for type checks
  # "PyQt5-stubs",
  "types-requests",
  "types-PyYAML",
]

[tool.flake8]
spellcheck-targets = "names"
dictionaries = "en_US,python,technical"
select = ["SC", "QGS"]
extend-exclude = ".venv"
per-file-ignores = ["**/test_*/*:SC200"]


[tool.ruff]
target-version = "py312"
line-length = 88

lint.ignore = [
  "FIX",   # flake8-fixme
  "TD002", # Missing author in TODO
  "TD003", # Missing TODO link
  "D100",  # Missing docstring in public module
  "D104",  # Missing docstring in public package
  "D105",  # Missing docstring in magic method
  "D107",  # Missing docstring in `__init__`
  "D417",  # Missing argument description
  # Conflicting rules (formatter)
  "D203",   # one-blank-line-before-class, D211 used (no-blank-line-before-class)
  "D213",   # multi-line-summary-second-line, D212 used (multi-line-summary-first-line)
  "COM812", # missing-trailing-comma (formatter will enforce this)
  "ISC001", # single-line-implicit-string-concatenation,
  "EXE002", # The file is executable but no shebang is present
  "EM101",  # non-variable-string in exception
  "TRY003", # long strings in excetptions
  "EM102",  # f-string in exception
  "G004",   # f-string in log
  "D101",   # Docstrings
  "D102",   # Docstrings
]

# List of all rules https://docs.astral.sh/ruff/rules/
lint.select = ["ALL"]

# Avoiding flagging (and removing) `SC200` from any `# noqa`
# directives, despite Ruff's lack of support for `flake8-spellcheck`.
lint.external = ["SC200", "QGS"]

lint.unfixable = [
  "F401", # Unused imports
  "F841", # Unused variables
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"


[tool.ruff.lint.per-file-ignores]
".github/workflows/*" = ["INP001"]
"test/*" = [
  "INP001",
  "D",       # pydocstyle
  "DTZ",     # flake8-datetimez
  "FBT",     # flake8-boolean-trap
  "TD",      # flake8-todos
  "S",       # flake8-bandit
  "SLF",     # flake8-self
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
  "ANN201",  # Missing return type annotation for public function
  "E501",    # Line too long
  "PLR2004", # Magic value used in comparison, consider replacing `2000` with a constant variable
  "PLR0913", # Too many arguments in function definition
  "ARG001",  # Unused function argument
  "AIR002",  # @dag should have an explicit `schedule` argument
]
# Plugin uses these extesively
"src/qgis_project_configurator_plugin/*" = ["N802", "ANN001", "ARG002"]

[tool.mypy]
python_version = "3.12"
follow_imports = "normal"
show_column_numbers = true

[tool.pytest.ini_options]
addopts = "-n auto --import-mode=importlib"

[tool.qgis_plugin_dev_tools]
plugin_package_name = "qgis_project_configurator_plugin"
runtime_requires = ["qgis_plugin_tools", "qgis_project_configurator"]
